draw button fix and center alignment fix

--- a/WebClient/Content/Game.less
+++ b/WebClient/Content/Game.less
@@ -3,8 +3,8 @@
 @green: #60b417;
 @blue: #4953c2;
 @disabled-color: #808080;
-.cards {
-    margin: auto;
+.cards, .buttons {
+    text-align: center;
 }
 .card {
     color: white;
@@ -37,9 +37,7 @@
     margin:auto;
     width: auto;
 }
-.buttons {
-    margin: auto;
-}
+
 .modal-body {
    text-align:center;
     .btn {
